# Cloudinary-Uploader-CLI

./: .gitignore  Cargo.toml  DEVELOPER_NOTES.md  README.md  README_en.md
.github/workflows/: rust.yml
docs/: cld-upload-helper-prd.md
src/: main.rs
src/cloudinary/: mod.rs
src/commands/: config.rs  init.rs  mod.rs  upload.rs
src/config/: mod.rs
src/utils/: fzf.rs  mod.rs
