[package]
name = "cld-upload-helper"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for uploading media to Cloudinary"
authors = ["pukpuklouis <pukpuk.tw@gmail.com>"]
rust-version = "1.65"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
cloudinary = "0.8.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
indicatif = "0.17"
colored = "2.1"
mime_guess = "2.0"
futures = "0.3"
ratatui = "0.26.1"
crossterm = "0.27"
sha1 = "0.10.6"
walkdir = "2.4.0"